--- a/Pandas.ipynb
+++ b/Pandas.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"E:/Padai/nptel/Data analytics with python/gapminder-FiveYearData.csv\")"
+    "df = pd.read_csv(\"E:/Data analytics with python/gapminder-FiveYearData.csv\")"
    ]
   },
   {
